@@ -15,11 +15,11 @@
                  [org.clojure/data.priority-map "1.2.0"]
                  [net.mikera/core.matrix "0.63.0"]
                  [net.mikera/vectorz-clj "0.48.0"]
-                 [com.microsoft/z3 "4.15.2"]
+                 [com.microsoft/z3 "4.15.4"]
                  [org.jgrapht/jgrapht-core "1.5.2"]
                  [dom-top "1.0.9"]]
   :resource-paths ["resources" "inputs"]
-  :jvm-opts ["-Xss1G"]
+  :jvm-opts ["-Xss1G" "-Djdk.attach.allowAttachSelf"]
   :profiles {:dev {:source-paths   ["test" "dev"]
                    :resource-paths ["test-inputs"]}})
 
@@ -27,4 +27,4 @@
 ; clone https://github.com/Z3Prover/z3
 ; run: `python scripts/mk_make.py --java`, then `cd build; make`, then `sudo make install`
 ; then install into local maven:
-; mvn install:install-file -Dfile=/usr/lib/com.microsoft.z3.jar -DgroupId=com.microsoft -DartifactId=z3 -Dversion=4.15.2 -Dpackaging=jar -DgeneratePom=true
+; mvn install:install-file -Dfile=/usr/lib/com.microsoft.z3.jar -DgroupId=com.microsoft -DartifactId=z3 -Dversion=4.15.4 -Dpackaging=jar -DgeneratePom=true
